# movie-database-api-cli-app

./: Cargo.toml  README.md
src/: main.rs
